<?xml version="1.0"?>
<package format="2">
    <name>director_digiforest</name>
    <version>1.0.0</version>
    <description>Director visualisation tool</description>
    <maintainer email="pat@marion.com">Pat Marion</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>java</depend>
    <depend>pcl_ros</depend>    
    <depend>pcl_plugin</depend>    
    <depend>ctk_python_console</depend>
    <depend>qt_property_browser</depend>
    <depend>python_qt</depend>
    <depend>digiforest_drs</depend>
</package>

